Bug 13299: Basic Installation wizard: Fileds in Add zone page are not aligned properly

--- a/ui/css/cloudstack3.css
+++ b/ui/css/cloudstack3.css
@@ -5917,7 +5917,7 @@ label.error {
 .multi-wizard.zone-wizard .select-container .field .name {
   float: left;
   margin: 18px 0 0 12px;
-  width: 90px;
+  width: 95px;
   font-size: 11px;
   text-align: left;
   line-height: 13px;
